--- a/docassemble/jamulus/data/questions/jamulus.yml
+++ b/docassemble/jamulus/data/questions/jamulus.yml
@@ -16,7 +16,7 @@ metadata:
          height="27">
   description:
     Dies ist die Anmeldung zum Jamulus-Workshop im Mai 2021.
-  exit url: https://lmr-hh.de/
+  exit url: https://www.lmr-hh.de/save-the-date-workshop-online-proben-mit-jamulus/
   revision_date: 2021-04-20
 ---
 # In diesem Abschnitt werden die Anmeldungen sowie die Automatisierung
