--- a/docassemble/jamulus/data/questions/jamulus.yml
+++ b/docassemble/jamulus/data/questions/jamulus.yml
@@ -57,11 +57,17 @@ code: |
   beitrag = 10 if Mitglied else 35
 ---
 code: |
-  key = "jamulus_rechnungsnummer"
+  if testmodus:
+    key = "jamulus_rechnungsnummer_test"
+  else:
+    key = "jamulus_rechnungsnummer"
+  redis.set("jamulus_rechnungsnummer", 94)
   with redis.lock(key + "-lock", timeout=5):
-    redis.set(key, 1, nx=True)
+    redis.set(key, 94, nx=True)
     redis.incr(key)
-    rechnungsnummer = "LMR-JAMULUS-" + redis.get(key).decode()
+    rechnungsnummer = print(f'2021{redis.get(key).decode()):03}')
+    if testmodus:
+      rechnungsnummer = rechnungsnummer + "-test"
 ---
 # Das Anmeldeformular als PDF. Hier können Dateiname und -inhalt gesetzt werden.
 # Der variable name sowie die valid formats sollten nicht verändert werden.
