--- a/docassemble/jamulus/data/questions/jamulus-fragen.yml
+++ b/docassemble/jamulus/data/questions/jamulus-fragen.yml
@@ -119,7 +119,7 @@ subquestion: |
     - 15:00 Uhr – 17:00 Uhr für Chorleiter\*innen und Chorist\*innen
     - 17:30 Uhr – 19:30 Uhr für Instrumentalist\*innen
 
-  Bitte wählen Sie aus, an welchem Workshop Sie im 2. Teil teilnehmen möchten?
+  Bitte wählen Sie aus, an welchem Workshop Sie im 2. Teil teilnehmen möchten.
 buttons:
   Chorleiter\*innen und Chorist\*innen: Chor
   Instrumentalist\*innen: Instrument
