--- a/docassemble/jamulus/data/questions/jamulus-fragen.yml
+++ b/docassemble/jamulus/data/questions/jamulus-fragen.yml
@@ -10,9 +10,9 @@ subquestion: |
   automatisch übermittelt.
   </div>
   % endif
-  
-  Zur Durchführung des Workshops benötigen wir von Ihnen folgende Daten. Diese
-  Daten werden als Rechnungsdaten verwendet.
+
+  Zur Durchführung des Jamulus-Workshops benötigen wir von Ihnen folgende Daten.
+  Diese Daten werden als Rechnungsdaten verwendet.
 
   Wenn Sie selbst Mitglied im Landesmusikrat Hamburg sind oder sich im Namen
   einer Organisation anmelden, die Mitglied im Landesmusikrat Hamburg ist,
